@@ -96,18 +96,15 @@ kde4_install() {
 
 	for kdepkg in ${PKG_NAMES:-${PN}}
 	do
-		for doc in AUTHORS BUGS ChangeLog NEWS README TODO
-		do
-			if [ -f ${S}/${kdepkg}/${doc} ]
-			then
-				insinto /usr/share/doc/${kdepkg}-${PV}
-				doins ${S}/${kdepkg}/${doc}
-			elif [ -f ${S}/${kdepkg#${PN}-}/${doc} ]
-			then
-				insinto /usr/share/doc/${kdepkg}-${PV}
-				doins ${S}/${kdepkg#${PN}-}/${doc}
-			fi
-		done
+		if [ -d ${S}/${kdepkg} ]
+		then
+			docinto /${kdepkg}-${PV}
+			dodoc ${S}/${kdepkg}/{AUTHORS,BUGS,ChangeLog,NEWS,README,TODO}
+		elif [ -d ${S}/${kdepkg#${PN}-} ]
+		then
+			docinto /${kdepkg}-${PV}
+			dodoc ${S}/${kdepkg#${PN}-}/{AUTHORS,BUGS,ChangeLog,NEWS,README,TODO}
+		fi
 	done
 }
 
