@@ -166,14 +166,8 @@ ruby_gnome2_install() {
 				;;
 		esac
 
-		insinto /usr/share/doc/ruby-${mod}-${PV}
-		for doc in COPYING.LIB ChangeLog README
-		do
-			if [ -f ${S}/${d}/${doc} ]
-			then
-				doins ${S}/${d}/${doc}
-			fi
-		done
+		docinto /ruby-${mod}-${PV}
+		dodoc ${S}/${d}/{COPYING.LIB,ChangeLog,README}
 
 		if [ -d ${d}/rdoc ]
 		then
